sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:7: error: cpt is already defined as variable cpt
  var cpt:Int=0
      ^AlgCocktailSort2:20: error: not found: value cpt2
    cpt2=0
    ^AlgCocktailSort2:24: error: not found: value cpt2
        cpt2+=1
        ^AlgCocktailSort2:32: error: not found: value cpt2
  }while(! (cpt==0 && cpt2==0))
                      ^